# daily-briefer

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  daily_briefer.py  email_labeler.py  main.py  process_todos.py  pyproject.toml  setup_oauth_credentials.py
docs/: ADR-002-todoist-mcp-integration.md  daily-briefer.md  label-emails.md
src/: crew_config.py
src/agents/: calendar_analyst.py  data_collector.py  document_synthesizer.py  email_analyst.py  email_briefing_agent.py  email_labeling_agent.py  task_manager.py  todo_processing_agent.py
src/constants/: __init__.py  email_labels.py
src/crews/: __init__.py  daily_briefing_crew.py  email_labeling_crew.py  todo_processing_crew.py
src/knowledge/: __init__.py  email_classification.py
src/models/: briefing_models.py
src/tasks/: calendar_analysis.py  data_collection.py  document_assembly.py  email_analysis.py  email_briefing.py  email_labeling.py  task_analysis.py  todo_processing.py
src/tools/: calendar_tool.py  file_tool.py  gmail_labeling_tool.py  gmail_todo_processing_tool.py  gmail_tool.py  todoist_tool.py  workspace_tool.py
tokens/: .gitkeep
